# types-oiio-python

./: README.md  generate_stubs.py  ocio-mypy-baseline.txt  oiio-mypy-baseline.txt  publish_on_pypi.py  pyproject.toml  setup.py  test_stubs.sh
types_oiio_python/OpenImageIO/: __init__.pyi
types_oiio_python/PyOpenColorIO/: __init__.pyi
