[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Paul Parneix"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["typing-extensions"]
description = "Type stubs for oiio-python"
name = "types-oiio-python"
readme = "README.md"
requires-python = ">=3.8"
version = "3.0.1.0.1"

[project.optional-dependencies]
dev = ["mypy", "isort", "black", "build", "typing-extensions", "oiio-python==3.0.1.0.1"]

[project.urls]
Homepage = "https://github.com/pypoulp/types-oiio-python"
